<resources>
    <string name="app_name">NewsFeed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title -->
    <string name="title_top_topic">Headlines</string>
    <string name="title_all_news">All News</string>
    <string name="title_profile">Profile</string>
    <string name="cd_top_topic">Headlines</string>
    <string name="cd_all_news">List</string>
    <string name="cd_profile">Form</string>


</resources>
